# data-engineering-zoomcamp

./: .gitignore  README.md
01-docker-terraform/: explore.ipynb  main.py  pyproject.toml
01-docker-terraform/pipeline/: Dockerfile  docker-compose.yml  pipeline.py
01-docker-terraform/questions/: queries.sql
01.hw-docker-sql/: README.md  docker-compose.yml  explore.ipynb
01.hw-docker-sql/ingest/: Dockerfile
pipeline/: Dockerfile  ingest_data.ipynb  ingest_data.py
