[project]
name = "01-hw-docker-sql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "jupyter>=1.1.1",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=23.0.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
]
